Quick fix for Quick CSS editor overflowing the page

--- a/src/renderer/coremods/settings/pages/QuickCSS.css
+++ b/src/renderer/coremods/settings/pages/QuickCSS.css
@@ -4,7 +4,7 @@
   height: 100%;
 }
 #replugged-quickcss-wrapper .cm-editor {
-  max-height: calc(100% - 20px);
+  max-height: calc(100% - var(--custom-app-top-bar-height) - 20px);
   background: var(--bg-overlay-2, var(--background-secondary));
   border: 1px solid var(--background-secondary-alt);
   border-radius: 4px;
